--- a/scss/app.scss
+++ b/scss/app.scss
@@ -4,9 +4,15 @@
  * Use it to customise the look and feel of the app.
  */
 
+ion-content {
+  font-size: 130%;
+}
+
 // Colors.
 $positive: #387ef5;
 $stable: #f5f5f5;
+
+$bar-content-bg: #069AD7 ;
 
 $base-background-color: #fcfcfc;
 $item-default-bg: white;
@@ -80,3 +86,34 @@ $button-default-active-border: $positive;
 
 // Include all of Moodle Mobile.
 @import "www/build/mm.bundle.scss";
+
+h2.course-title {
+  font-size: 130%;
+  margin-left: 5px;
+  display: inline-block;
+}
+
+img.course-title-img {
+  max-width: 30%;
+  vertical-align: middle;
+  max-height: 75px;
+}
+
+.item.mm-course-handlers {
+  padding: 2px;
+}
+
+.card .item.item-icon-right {
+  padding: 0;
+}
+
+#course-content-go-to-course {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+#course-summary-img {
+  display: block;
+  margin: auto;
+}
