--- a/www/core/components/course/templates/section.html
+++ b/www/core/components/course/templates/section.html
@@ -25,6 +25,8 @@
                 <a class="item item-text-wrap mm-course-module-handler {{class}}" ng-repeat="module in section.modules" ng-click="action($event)" ng-class="{'item-button-right': (buttons && buttons.length > 0) || spinner, 'item-media': icon, 'item-completion': module.completionstatus}" ng-controller="module._controller" title="{{ title }}">
 
                     <img ng-src="{{ icon }}" alt="" role="presentation" ng-if="icon">
+                    <!--<mm-completion ng-if="module.completionstatus" completion="module.completionstatus" module-name="title" after-change="completionChanged"></mm-completion>-->
+
                     <mm-format-text watch="true">{{ title }}</mm-format-text>
 
                     <button ng-repeat="button in buttons" ng-hide="button.hidden" ng-click="button.action($event)" class="button button-icon" aria-label="{{ button.label | translate }}">
@@ -33,7 +35,6 @@
 
                     <ion-spinner ng-if="spinner"></ion-spinner>
 
-                    <mm-completion ng-if="module.completionstatus" completion="module.completionstatus" module-name="title" after-change="completionChanged"></mm-completion>
                 </a>
 
                 <!-- When there is nothing in the section. -->
