--- a/www/core/components/course/templates/sections.html
+++ b/www/core/components/course/templates/sections.html
@@ -6,12 +6,23 @@
         </mm-context-menu>
     </ion-nav-buttons>
     <mm-split-view load-when="sectionsLoaded" load="{{sectionToLoad}}" component="mmCoreCourseSectionsList">
-        <ion-content mm-state-class>
-           <ion-refresher on-refresh="doRefresh()" pulling-text="{{ 'mm.core.pulltorefresh' | translate }}" ng-if="sectionsLoaded"></ion-refresher>
+        <ion-content mm-state-class padding="true" class="has-header">
+            <h2 class="padding">{{fullname}}</h2>
+            <div class="item item-text-wrap" ng-if="summary">
+                <!--TO-DO : change this to actually get a string | need to add the string too ! | then perform gulp -->
+                <h3>Summary</h3>
+                <p>
+                    <summary>
+                        <mm-format-text class="mm-content-with-float" watch="true" expand-on-click="true">{{summary}}</mm-format-text>
+                    </summary>
+                </p>
+            </div>
+            <img id="course-summary-img" src="img/course-default1.jpg" alt="translate:{$a: disc.fullname} }}" role="presentation">
+            <ion-refresher on-refresh="doRefresh()" pulling-text="{{ 'mm.core.pulltorefresh' | translate }}" ng-if="sectionsLoaded"></ion-refresher>
             <mm-loading hide-until="sectionsLoaded">
-                <ul class="list">
+                <ul class="list" id="course-content-go-to-course">
                     <li ng-repeat="section in sections" ng-if="sectionHasContent(section)">
-                        <a class="item item-text-wrap item-button-right" mm-split-view-link="site.mm_course-section({cid: courseId, sectionid: section.id, mid: moduleId})" title="{{section.name}}">
+                        <a class="item item-text-wrap item-button-right" mm-split-view-link="site.mm_course-section({cid: courseId, sectionid: section.id, mid: moduleId})" title="{{name}}">
                             <mm-format-text watch="true">{{section.name}}</mm-format-text>
 
                             <button ng-if="downloadSectionsEnabled && section.showDownload && !section.isDownloading && !section.isCalculating" ng-click="prefetch($event, section)" class="button button-icon" aria-label="{{ 'mm.core.download' | translate }}">
