--- a/www/core/components/courses/templates/list.html
+++ b/www/core/components/courses/templates/list.html
@@ -7,21 +7,16 @@
         <ion-refresher pulling-text="{{ 'mm.core.pulltorefresh' | translate }}" ng-if="coursesLoaded" on-refresh="refreshCourses()">
         </ion-refresher>
         <mm-loading hide-until="coursesLoaded">
-            <div class="list" ng-if="courses && courses.length > 5">
-                <ion-input class="item item-input">
-                    <i class="icon ion-funnel placeholder-icon"></i>
-                    <input type="text" placeholder="{{ 'mm.courses.filtermycourses' | translate}}" ng-model="filter.filterText">
-                </ion-input>
-            </div>
             <section ng-repeat="course in courses | filter:{fullname: filter.filterText}" class="list card">
                 <a class="item item-icon-right" ui-sref="site.mm_course({courseid: course.id, coursefullname: course.fullname})" title="{{course.fullname}}">
-                    <h2><mm-format-text watch="true">{{course.fullname}}</mm-format-text></h2>
-                    <i class="icon icon-accessory ion-chevron-right"></i>
+                    <img class="course-title-img" src="img/course-default1.jpg" alt="translate:{$a: disc.fullname} }}" role="presentation">
+                    <h2 class="course-title"><mm-format-text watch="true">{{course.fullname}}</mm-format-text></h2>
+                    <!--<i class="icon icon-accessory ion-chevron-right"></i>-->
                 </a>
                 <div class="item item-text-wrap" ng-show="course.summary">
                     <p>
                         <summary>
-                            <mm-format-text class="mm-content-with-float" watch="true" shorten="40%" expand-on-click="true">{{course.summary}}</mm-format-text>
+                            <mm-format-text class="mm-content-with-float" watch="true" shorten="50" expand-on-click="true">{{course.summary}}</mm-format-text>
                         </summary>
                     </p>
                 </div>
